unpackaged/main/default/objects/CA_Membership__c/CA_Membership__c.object-meta.xml
<CustomObject>
    <label>CA Membership</label>
    <nameField>
        <label>CA Membership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>