unpackaged/main/default/objects/CA_Membership__c/fields/GES_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Executive__c</fullName>
    <label>GES Account Executive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>John Boy</fullName>
            </value>
            <value>
                <fullName>Jennifer Spencer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>