unpackaged/main/default/objects/CA_Membership__c/fields/GES_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Manager__c</fullName>
    <label>GES Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stephanie Specht</fullName>
            </value>
            <value>
                <fullName>Jessica Bodner</fullName>
            </value>
            <value>
                <fullName>Jamie Brosmore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>